--- a/styles/common.css
+++ b/styles/common.css
@@ -1,5 +1,5 @@
-@import url('base/reset.css');
+@import url('base/normalize.css');
 @import url('base/color.css');
 @import url('base/font.css');
 @import url('base/layout.css');
-@import url('base/button.css');
+@import url('base/buttonBase.css');
