style: 로그인 페이지 내 태그의 클래스명 변경

--- a/pages/login/styles.css
+++ b/pages/login/styles.css
@@ -110,14 +110,14 @@ button {
   height: auto;
 }
 
-.create-account {
+.sign-up {
   font-size: 1.4rem;
   font-weight: 500;
   line-height: 2.4rem;
 }
 
-.create-account a {
-  color: var(--login-link-font-color);
+.sign-up a {
+  color: var(--sign-up-link-font-color);
   text-decoration: underline;
 }
 
