--- a/pages/login/styles.css
+++ b/pages/login/styles.css
@@ -1,4 +1,5 @@
 :root {
+  --main-background-color: #fcfcfc;
   --main-ivory-color: #f3f4f6;
   --input-focus-border-color: #3692ff;
   --main-grey-color: #9ca3af;
@@ -22,15 +23,16 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: var(--main-background-color);
 }
 
 main {
   width: 64rem;
   height: 81.8rem;
-  margin: 60px auto;
+  margin: 6rem auto;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
 }
 
@@ -66,13 +68,17 @@ button {
 
 input {
   border-radius: 1.2rem;
-  color: var(--main-grey-color);
   background-color: var(--main-ivory-color);
   padding: 1.6rem 2.4rem 1.6rem 2.4rem;
+  font-weight: 400;
 }
 
 input:focus {
   border: var(--input-focus-border-color);
+}
+
+::placeholder {
+  color: var(--main-grey-color);
 }
 
 button {
@@ -92,7 +98,7 @@ button {
   align-items: center;
   padding: 1.8rem 2.3rem 1.8rem 2.3rem;
   background-color: var(--social-login-bg-color);
-  border-radius: 8px;
+  border-radius: 0.8rem;
   font-size: 1.6rem;
   font-weight: 500;
   line-height: 2.6rem;
