style: normalize.css 대신 tailwindcss의 preflight.css 사용

--- a/styles/common.css
+++ b/styles/common.css
@@ -1,4 +1,4 @@
-@import url('base/normalize.css');
+@import url('base/preflight.css');
 @import url('base/color.css');
 @import url('base/font.css');
 @import url('base/layout.css');
