--- a/pages/login/styles.css
+++ b/pages/login/styles.css
@@ -74,7 +74,7 @@ input {
 }
 
 input:focus {
-  border: var(--input-focus-border-color);
+  outline: 1px solid var(--input-focus-border-color);
 }
 
 ::placeholder {
