style: 로그인,회원가입 페이지에 적용할 CSS파일 변경
- 로그인,회원가입 페이지에 적용되는 각각의 CSS파일이 한개의 클래스 선택자를 제외하고 동일:
하나의 CSS파일에 나머지 CSS파일에 있던 클래스 선택자를 추가하고 두개의 페이지에서 동일한 CSS파일을 적용하도록 변경

--- a/pages/login/styles.css
+++ b/pages/login/styles.css
@@ -119,13 +119,15 @@ button {
   height: auto;
 }
 
-.sign-up {
+.sign-up,
+.login {
   font-size: 1.4rem;
   font-weight: 500;
   line-height: 2.4rem;
 }
 
-.sign-up a {
+.sign-up a,
+.login a {
   color: var(--sign-up-link-font-color);
   text-decoration: underline;
 }
