style: 랜딩페이지 스타일 변경

--- a/styles.css
+++ b/styles.css
@@ -101,11 +101,8 @@ header {
   word-break: keep-all;
 }
 
-.banner-text.bottom {
-  min-width: 29rem;
-}
-
 .banner-text-container.bottom {
+  max-width: 33rem;
   margin-bottom: 17.25rem;
 }
 
