--- a/styles/base/variables.css
+++ b/styles/base/variables.css
@@ -20,7 +20,9 @@
   --line-height-xs: 18px;
 
   /* Font Weights */
+  --font-weight-regular: 400;
   --font-weight-medium: 500;
+  --font-weight-semibold: 600;
   --font-weight-bold: 700;
 
   /* Colors */
@@ -42,21 +44,22 @@
   --color-gray50: #F9FAFB;
 
   /* Padding */
-  --padding-12: 12px;
-  --padding-16: 16px;
-  --padding-24: 24px;
-  --padding-32: 32px;
-  --padding-40: 40px;
-  --padding-122: 122px;
-  --padding-200: 200px;
-  --padding-405: 405px;
+  --padding-1: 0.25rem; /* 4px */
+  --padding-3: calc(var(--padding-1) * 3);
+  --padding-4: calc(var(--padding-1) * 4);
+  --padding-6: calc(var(--padding-1) * 6);
+  --padding-8: calc(var(--padding-1) * 8);
+  --padding-10: calc(var(--padding-1) * 10);
+  --padding-31: calc(var(--padding-1) * 31);
+  --padding-50: calc(var(--padding-1) * 50);
+  --padding-101: calc(var(--padding-1) * 101);
 
   /* Border Radius */
   --border-radius-xs: 2px;
-  --border-radius-xl: 40px;
-  --border-radius-lg: 8px;
-  --border-radius-md: 6px;
   --border-radius-sm: 4px;
+  --border-radius-md: 6px;
+  --border-radius-lg: 8px;
+  --border-radius-xl: 40px;
 
   /* Break Points */
   --breakpoint-mb: 375px;
