--- a/판다마켓/mainstyle.css
+++ b/판다마켓/mainstyle.css
@@ -10,6 +10,22 @@ html{
     font-family: 'Pretendard', sans-serif;
 }
 
+button{
+    border: none;
+    outline: none;
+}
+
+button a{
+    text-decoration: none;
+    text-align: center;
+    display: inline-block;
+    height: 100%;
+    cursor: pointer;
+    align-items: center;
+    text-decoration: none;
+    width: 100%;
+    display: block;
+}
 
 header{
     width: 100%;
@@ -22,7 +38,6 @@ header{
     align-items: center;
     justify-content: space-between;
     max-width: 1520px;
-    /* margin: 0 10%; */
     margin: 0 auto;
     padding: 10px 0;
 }
@@ -37,43 +52,30 @@ header{
 }
 
 header .btn_login{
-    padding: 1rem 4rem;
     background-color: #3692FF;
     border-radius: 8px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     color: #fff;
     font-size: 1.6rem;
     font-weight: 700;
     line-height: 26px;
+    width: 128px;
+    height: 48px;
 }
 
-header .btn_login a, .mv_text a{
-    text-decoration: none;
-    text-align: center;
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* border: 1px solid red; */
+header .btn_login a{
+    line-height: 48px;
 }
 
 .main_visual, .bottom_banner{
     background-color: #CFE5FF;
     color: #374151;
-    /* padding: 0 40.5rem; */
-    padding: 0px 21%; 
+    padding: 0px 25%; 
     
 }
 
 .main_visual .main_inner{
     display: flex;
     align-items: flex-end;
-    /* padding-top: 20rem; */
     margin: 0 auto;
     justify-content: center;
     max-width: 1920px;
@@ -88,17 +90,18 @@ header .btn_login a, .mv_text a{
 
 .main_visual .btn{
     width: 18.5vw;
-    padding: 1.5rem;
+    height: 56px;
     background-color: #3692FF;
     border-radius: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     color: #fff;
     font-size: 20px;
     margin-top: 32px;
     max-width: 356px;
     min-width: 300px;
+}
+
+.main_visual .btn a{
+    line-height: 56px;
 }
 
 .main_visual .txt_img{
@@ -185,15 +188,15 @@ header .btn_login a, .mv_text a{
 .bottom_banner .banner_inner span{
     margin-bottom: 14rem;
     min-width: 300px;
+    min-width: 240px;
     display: inline-block;
     font-size: 4rem;
     font-weight: 700;
 }
 
 .bottom_banner .banner_inner img{
-    width: 68%;
-    /* margin-left: 5rem; */
-    min-width: 160px;
+    width: 62%;
+    min-width: 200px;
 }
 
 footer{
