--- a/판다마켓/sub/login/loginstyle.css
+++ b/판다마켓/sub/login/loginstyle.css
@@ -68,7 +68,7 @@ input::placeholder{
 }
 
 input#pass{
-    background-image: url(/img/btn_visibility_on_24px.png);
+    background-image: url(../../img/btn_visibility_on_24px.png);
     background-repeat: no-repeat;
     background-size: 24px;
     background-position: 96% center;
@@ -80,27 +80,35 @@ input#pass{
     position: absolute;
 }
 
-.join_bt{
+.login_bt{
     background-color: var(--cool-gray200);
     justify-content: center;
     color: var(--cool-gray100);
     border-radius: 40px;
     width: 67.3%;
-    padding: 12px 24px;
+    height: 56px;
+    /* padding: 12px 24px; */
+    
 }
 
-.join_bt:focus{
+.login_bt:hover{
     background-color: var(--blue200);
     color: var(--cool-gray100);
 }
 
-.login_bt > p{
+.login_bt > a{
     font-size: 20px;
     font-weight: 600;
+    display: block;
+    text-decoration: none;
+    color: var(--cool-gray100);
+    height: 100%;
+    line-height: 56px;
 }
 
 .simple_login{
     background-color: var(--blue100);
+    /* padding: 16px 23px; */
     border-radius: 8px;
     display: flex;
     align-items: center;
@@ -120,7 +128,7 @@ input#pass{
     margin: 12px 24px;
 }
 
-.login_inner .txt p, a{
+.login_inner .txt p{
     font-size: 14px;
     font-weight: 500;
     line-height: 24px;
