style: 로그인,회원가입 페이지 태그 변경

--- a/pages/login/styles.css
+++ b/pages/login/styles.css
@@ -43,11 +43,11 @@ form {
   width: 100%;
 }
 
-.logo {
+header {
   margin-bottom: 4rem;
 }
 
-.logo img {
+header img {
   width: 39.6rem;
   height: auto;
 }
