--- a/팬더마켓/style.css
+++ b/팬더마켓/style.css
@@ -1,4 +1,5 @@
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css");
+@import "reset.css";
 
 html{
     font-size:10px;
