--- a/styles/base/variables.css
+++ b/styles/base/variables.css
@@ -48,6 +48,7 @@
   --padding-3: calc(var(--padding-1) * 3);
   --padding-4: calc(var(--padding-1) * 4);
   --padding-6: calc(var(--padding-1) * 6);
+  --padding-7\.5: calc(var(--padding-1) * 7.5);
   --padding-8: calc(var(--padding-1) * 8);
   --padding-10: calc(var(--padding-1) * 10);
   --padding-31: calc(var(--padding-1) * 31);
