--- a/styles/home.css
+++ b/styles/home.css
@@ -4,7 +4,7 @@
 @import url('components/footer.css');
 
 body {
-  min-width: 375px;
+  min-width: var(--breakpoint-mb);
   font-family: 'pretendard', sans-serif;
 }
 
@@ -13,7 +13,7 @@ body {
 }
 
 .content {
-  min-width: 375px;
+  min-width: var(--breakpoint-mb);
   max-width: 1100px;
   padding: var(--padding-50) var(--padding-4) 0;
   margin: 0 auto;
