--- a/styles/base/layout.css
+++ b/styles/base/layout.css
@@ -37,6 +37,9 @@
 .pt-3 {
   padding-top: var(--padding-3);
 }
+.pt-15 {
+  padding-top: var(--padding-15);
+}
 .pt-50 {
   padding-top: var(--padding-50);
 }
@@ -44,9 +47,13 @@
   padding-top: var(--padding-4);
   padding-bottom: var(--padding-4);
 }
-.px-23 {
-  padding-left: 23px;
-  padding-right: 23px;
+.px-6 {
+  padding-left: var(--padding-6);
+  padding-right: var(--padding-6);
+}
+.px-13 {
+  padding-left: var(--padding-13);
+  padding-right: var(--padding-13);
 }
 .px-31 {
   padding-left: var(--padding-31);
@@ -93,5 +100,26 @@
 @media (max-width: 744px) {
   .md-none {
     display: none;
+  }
+  .tb-pt-12 {
+    padding-top: var(--padding-12);
+  }
+}
+@media (max-width: 375px) {
+  .mb-gap-2{
+    gap: var(--padding-2);
+  }
+  .mb-gap-4 {
+    gap: var(--padding-4);
+  }
+  .mb-pt-6 {
+    padding-top: var(--padding-6);
+  }
+  .mb-px-4 {
+    padding-left: var(--padding-4);
+    padding-right: var(--padding-4);
+  }
+  .mb-w-49\.5 {
+    width: calc(var(--padding-1) * 49.5);
   }
 }
