--- a/styles/base/variables.css
+++ b/styles/base/variables.css
@@ -45,12 +45,16 @@
 
   /* Padding */
   --padding-1: 0.25rem; /* 4px */
+  --padding-2: calc(var(--padding-1) * 2);
   --padding-3: calc(var(--padding-1) * 3);
   --padding-4: calc(var(--padding-1) * 4);
   --padding-6: calc(var(--padding-1) * 6);
   --padding-7\.5: calc(var(--padding-1) * 7.5);
   --padding-8: calc(var(--padding-1) * 8);
   --padding-10: calc(var(--padding-1) * 10);
+  --padding-12: calc(var(--padding-1) * 12);
+  --padding-13: calc(var(--padding-1) * 13);
+  --padding-15: calc(var(--padding-1) * 15);
   --padding-31: calc(var(--padding-1) * 31);
   --padding-50: calc(var(--padding-1) * 50);
   --padding-101: calc(var(--padding-1) * 101);
