--- a/styles/base/variables.css
+++ b/styles/base/variables.css
@@ -1,23 +1,23 @@
 :root {
   /* Font Sizes */
-  --font-size-4xl: 40px;
-  --line-height-4xl: 56px;
-  --font-size-3xl: 32px;
-  --line-height-3xl: 42px;
-  --font-size-2xl: 24px;
-  --line-height-2xl: 32px;
-  --font-size-xl: 20px;
-  --line-height-xl: 32px;
-  --font-size-2lg: 18px;
-  --line-height-2lg: 26px;
-  --font-size-lg: 16px;
-  --line-height-lg: 26px;
-  --font-size-md: 14px;
-  --line-height-md: 24px;
-  --font-size-sm: 13px;
-  --line-height-sm: 22px;
-  --font-size-xs: 12px;
-  --line-height-xs: 18px;
+  --font-size-4xl: 2.5rem;
+  --line-height-4xl: 3.5rem;
+  --font-size-3xl: 2rem;
+  --line-height-3xl: 2.625rem;
+  --font-size-2xl: 1.5rem;
+  --line-height-2xl: 2rem;
+  --font-size-xl: 1.25rem;
+  --line-height-xl: 2rem;
+  --font-size-2lg: 1.125rem;
+  --line-height-2lg: 1.625rem;
+  --font-size-lg: 1rem;
+  --line-height-lg: 1.625rem;
+  --font-size-md: 0.875rem;
+  --line-height-md: 1.5rem;
+  --font-size-sm: 0.8125rem;
+  --line-height-sm: 1.375rem;
+  --font-size-xs: 0.75rem;
+  --line-height-xs: 1.125rem;
 
   /* Font Weights */
   --font-weight-regular: 400;
@@ -60,11 +60,11 @@
   --padding-101: calc(var(--padding-1) * 101);
 
   /* Border Radius */
-  --border-radius-xs: 2px;
-  --border-radius-sm: 4px;
-  --border-radius-md: 6px;
-  --border-radius-lg: 8px;
-  --border-radius-xl: 40px;
+  --border-radius-xs: 0.125rem;
+  --border-radius-sm: 0.25rem;
+  --border-radius-md: 0.375rem;
+  --border-radius-lg: 0.5rem;
+  --border-radius-xl: 2.5rem;
 
   /* Break Points */
   --breakpoint-mb: 375px;
