--- a/styles/base/buttonBase.css
+++ b/styles/base/buttonBase.css
@@ -1,20 +1,10 @@
 @import url('variables.css');
 
 .btn {
-  border-radius: var(--border-radius-lg);
-  color: #ffff;
+  color: var(--color-gray50);
   text-align: center;
   white-space: nowrap;
 }
 .btn-block {
   display: block;
-  padding: var(--padding-3);
-  border-radius: var(--border-radius-xl);
-  font-weight: var(--font-weight-medium);
-}
-
-.btn-login {
-  padding: 11px 43px;
-  font-size: var(--font-size-lg);
-  font-weight: var(--font-weight-medium);
 }
