--- a/styles/home.css
+++ b/styles/home.css
@@ -8,59 +8,11 @@ body {
   font-family: 'pretendard', sans-serif;
 }
 
-.container {
+.main-container {
   word-break: keep-all;
 }
 
-.content {
+.main-content {
   min-width: var(--breakpoint-mb);
   max-width: 1100px;
-  padding: var(--padding-50) var(--padding-4) 0;
-  margin: 0 auto;
-  h1 {
-    padding-bottom: var(--padding-8);
-  }
-  a {
-    margin-bottom: var(--padding-6);
-  }
-  img {
-    object-fit: contain;
-  }
-}
-
-@media (max-width: 744px) {
-  .content {
-    flex-direction: column;
-    padding-top: 84px;
-    text-align: center;
-    gap: 187px;
-    div:first-child {
-      align-items: center;
-    }
-    h1 {
-      padding-bottom: var(--padding-6);
-    }
-  }
-  .container + .container {
-    .content {
-      padding-top: var(--padding-50);
-      gap: 193px;
-    }
-  }
-}
-
-@media (max-width: 375px) {
-  .content {
-    padding-top: 48px;
-    gap: 48px;
-    h1 {
-      padding-bottom: 18px;
-    }
-  }
-  .container + .container {
-    .content {
-      padding-top: 121px;
-      gap: 113px;
-    }
-  }
 }
