style: Adjust layout and spacing in main page

--- a/styles/base/font.css
+++ b/styles/base/font.css
@@ -143,4 +143,7 @@
     font-size: var(--font-size-4xl);
     line-height: var(--line-height-4xl);
   }
+  .mb-text-center {
+    text-align: center;
+  }
 }
