--- a/styles/base/variables.css
+++ b/styles/base/variables.css
@@ -48,6 +48,7 @@
   --padding-2: calc(var(--padding-1) * 2);
   --padding-3: calc(var(--padding-1) * 3);
   --padding-4: calc(var(--padding-1) * 4);
+  --padding-5: calc(var(--padding-1) * 5);
   --padding-6: calc(var(--padding-1) * 6);
   --padding-7\.5: calc(var(--padding-1) * 7.5);
   --padding-8: calc(var(--padding-1) * 8);
@@ -56,9 +57,15 @@
   --padding-12: calc(var(--padding-1) * 12);
   --padding-13: calc(var(--padding-1) * 13);
   --padding-15: calc(var(--padding-1) * 15);
+  --padding-15\.5: calc(var(--padding-1) * 15.5);
+  --padding-16: calc(var(--padding-1) * 16);
+  --padding-17: calc(var(--padding-1) * 17);
+  --padding-17\.5: calc(var(--padding-1) * 17.5);
   --padding-21: calc(var(--padding-1) * 21);
   --padding-31: calc(var(--padding-1) * 31);
+  --padding-33: calc(var(--padding-1) * 33);
   --padding-50: calc(var(--padding-1) * 50);
+  --padding-52: calc(var(--padding-1) * 52);
   --padding-101: calc(var(--padding-1) * 101);
 
   /* Border Radius */
