--- a/styles/base/variables.css
+++ b/styles/base/variables.css
@@ -28,6 +28,7 @@
   /* Colors */
   --color-bg-main: #CFE5FF;
   --color-bg-base: #FCFCFC;
+  --color-bg-label: #E6F2FF;
   --color-bg-footer: #111827;
   --color-bg-primary: #3692FF;
   --color-primary100: #3692FF;
@@ -42,12 +43,16 @@
   --color-gray200: #E5E7EB;
   --color-gray100: #F3F4F6;
   --color-gray50: #F9FAFB;
+  --color-white: #FFFFFF;
+  --color-border: #DFDFDF;
 
   /* Padding */
   --padding-1: 0.25rem; /* 4px */
   --padding-2: calc(var(--padding-1) * 2);
+  --padding-2\.5: calc(var(--padding-1) * 2.5);
   --padding-3: calc(var(--padding-1) * 3);
   --padding-4: calc(var(--padding-1) * 4);
+  --padding-4\.5: calc(var(--padding-1) * 4.5);
   --padding-5: calc(var(--padding-1) * 5);
   --padding-6: calc(var(--padding-1) * 6);
   --padding-7\.5: calc(var(--padding-1) * 7.5);
@@ -64,8 +69,13 @@
   --padding-21: calc(var(--padding-1) * 21);
   --padding-31: calc(var(--padding-1) * 31);
   --padding-33: calc(var(--padding-1) * 33);
+  --padding-34\.5: calc(var(--padding-1) * 34.5);
+  --padding-35\.5: calc(var(--padding-1) * 35.5);
+  --padding-49\.5 : calc(var(--padding-1) * 49.5);
   --padding-50: calc(var(--padding-1) * 50);
   --padding-52: calc(var(--padding-1) * 52);
+  --padding-53: calc(var(--padding-1) * 53);
+  --padding-89: calc(var(--padding-1) * 89);
   --padding-101: calc(var(--padding-1) * 101);
 
   /* Border Radius */
