--- a/mission2/landing.css
+++ b/mission2/landing.css
@@ -65,9 +65,11 @@ a {
 }
 
 .section1_title {
+  width: 70%;
   font-weight: 700;
   font-size: 40px;
   line-height: 56px;
+  word-break:break-all;
 }
 
 .show-btn {
