feat: 스프린트 미션 3 기본 요구사항 - 로그인 페이지 공통 요구사항(에러메세지, 로그인 버튼 동작)
(cherry picked from commit 6f7a14b1d9e0ce47c19726e20a2e43a223c2d29e)

--- a/styles/base/color.css
+++ b/styles/base/color.css
@@ -25,7 +25,9 @@
 .bg-gray400 {
   background-color: var(--color-gray400);
 }
-
+.error {
+  color: var(--color-error);
+}
 .primary100 {
   color: var(--color-primary100);
 }
