refactor: 파일 구조 개선 및 css :root 를 common.css로 중복 코드 개선

--- a/index.css
+++ b/index.css
@@ -1,9 +1,4 @@
-:root {
-  --main-color: #3692ff;
-  --banner-color: #cfe5ff;
-  --border-color: #dfdfdf;
-  --section-bg-color: #fcfcfc;
-  --footer-bg-color: #111827;
+html {
   font-size: 10px;
 }
 
