feat: abort controller를 사용하여 window unload 이벤트 발생시 등록했던 event handler 제거
(cherry picked from commit 73c62e379d40861727239c04fb09dadc324978f5)

--- a/styles/components/form.css
+++ b/styles/components/form.css
@@ -6,11 +6,15 @@ form label {
 
 input {
   background-color: var(--color-gray100);
-  color: var(--color-gray400);
+  color: var(--color-gray800);
   padding: 15px 24px;
   border-radius: var(--border-radius-lg);
   outline: none;
   border: none;
+}
+
+input::placeholder {
+  color: var(--color-gray400);
 }
 
 input:focus {
