--- a/assets/styles/sign.css
+++ b/assets/styles/sign.css
@@ -173,3 +173,59 @@ button:disabled {
   padding-left: 16px;
   padding-top: 8px;
 }
+
+#modal-container {
+  display: none;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  z-index: 50;
+}
+
+#modal-container.show {
+  display: block;
+}
+
+#modal-background {
+  width: 100%;
+  height: 100%;
+  background-color: #000000;
+  opacity: 0.7;
+  z-index: 51;
+}
+
+#modal {
+  position: absolute;
+  top: calc(50% - 12.5rem);
+  left: calc(50% - 27rem);
+  width: 54rem;
+  height: 25rem;
+  border-radius: 0.8rem;
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#modal p {
+  font-size: 1.6rem;
+  font-weight: 500;
+  line-height: 1.92rem;
+}
+
+#modal button {
+  position: absolute;
+  width: 12rem;
+  height: 4.8rem;
+  border-radius: 0.8rem;
+  right: 0;
+  bottom: 0;
+  margin-bottom: 2.8rem;
+  margin-right: 2.8rem;
+  font-size: 1.6rem;
+  line-height: 1.92rem;
+  font-weight: 600;
+}
