--- a/styles/common.css
+++ b/styles/common.css
@@ -2,6 +2,7 @@
 @import url('base/color.css');
 @import url('base/font.css');
 @import url('base/layout.css');
+@import url('base/animation.css');
 @import url('base/buttonBase.css');
 
 :root {
