--- a/styles/base/layout.css
+++ b/styles/base/layout.css
@@ -33,6 +33,9 @@
 .shrink-0 {
   flex-shrink: 0;
 }
+.min-w-30 {
+  min-width: var(--padding-30);
+}
 .min-h-40 {
   min-height: var(--padding-40);
 }
@@ -52,6 +55,9 @@
 }
 .justify-center {
   justify-content: center;
+}
+.justify-end	{
+  justify-content: flex-end;
 }
 .space-between {
   justify-content: space-between;
@@ -136,6 +142,9 @@
 .mb-34\.5 {
   margin-bottom: var(--padding-34\.5)
 }
+.m-auto {
+  margin: auto;
+}
 .mx-auto {
   margin-right: auto;
   margin-left: auto;
@@ -164,11 +173,21 @@
 .gap-10 {
   gap: var(--padding-10)
 }
+.gap-11 {
+  gap: var(--padding-11)
+}
+.gap-12 {
+  gap: var(--padding-12)
+}
 .gap-16 {
   gap: var(--padding-16);
 }
 .gap-y-6 {
   row-gap: var(--padding-6);
+}
+/* Height */
+.h-full {
+  height: 100%;
 }
 /* Width */
 .w-full {
@@ -250,6 +269,13 @@
   }
 }
 @media (max-width: 375px) {
+  .mb-mx-6 {
+    margin-left: var(--padding-6);
+    margin-right: var(--padding-6);
+  }
+  .mb-text-center {
+    text-align: center;
+  }
   .mb-order-last {
     order: 9999;
   }
