style: 랜딩페이지 반응형 스타일 작성

--- a/assets/styles/sign.css
+++ b/assets/styles/sign.css
@@ -231,7 +231,7 @@ button:disabled {
   font-weight: 600;
 }
 
-@media (min-width: 375px) and (max-width: 743px) {
+@media (max-width: 743px) {
   main {
     width: calc(100% - 3.2rem);
     max-width: 40rem;
