--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -40,7 +40,7 @@ header {
 .header-container {
   width: 100%;
   max-width: 152rem;
-  padding: 0 20rem;
+  margin: 0 20rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -197,10 +197,6 @@ header {
   max-width: 30rem;
 }
 
-.main-page-text.third {
-  max-width: 33rem;
-}
-
 .main-title.third {
   max-width: 30rem;
 }
@@ -213,7 +209,7 @@ header {
   word-break: keep-all;
 }
 
-.align-right {
+.main-page-text.align-right {
   display: flex;
   flex-direction: column;
   align-items: end;
@@ -232,7 +228,7 @@ footer {
 .footer-container {
   width: 100%;
   max-width: 152rem;
-  padding: 0 20rem;
+  margin: 0 20rem;
   font-size: 1.6rem;
   font-weight: 400;
   margin-top: 3.2rem;
@@ -270,4 +266,162 @@ footer {
   cursor: pointer;
   width: 1.8rem;
   height: 1.8rem;
+}
+
+@media (max-width: 1199px) {
+  .header-container {
+    margin: 0 2.4rem;
+  }
+
+  .banner {
+    height: 77.1rem;
+    margin-bottom: 2.4rem;
+  }
+
+  .banner.bottom {
+    height: 92.7rem;
+    margin: 0;
+  }
+
+  .banner-content {
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 100%;
+    width: 100%;
+  }
+  .banner-text-container {
+    font-size: 4rem;
+    max-width: 100%;
+    align-items: center;
+    margin-bottom: 21rem;
+  }
+
+  .banner-text {
+    text-align: center;
+  }
+
+  .image-container,
+  .image-container.bottom {
+    width: auto;
+  }
+
+  .main-page-section {
+    gap: 5.2rem;
+  }
+
+  .main-page {
+    height: auto;
+    align-items: start;
+  }
+
+  .main-page-image {
+    width: 100%;
+  }
+
+  .main-page-text {
+    margin: 0;
+  }
+
+  .main-page-text.first {
+    max-width: 50rem;
+  }
+
+  .main-page-text.second {
+    max-width: 60rem;
+  }
+
+  .main-page-text.third {
+    max-width: 60rem;
+  }
+
+  .description {
+    max-width: 30rem;
+  }
+
+  .description.third {
+    max-width: 34rem;
+  }
+
+  .main-content-container {
+    flex-direction: column;
+    width: 69.6rem;
+    max-height: 100%;
+    max-width: 100%;
+    gap: 2.4rem;
+    align-items: start;
+  }
+
+  .main-content-container.align-right {
+    flex-direction: column-reverse;
+    align-items: end;
+  }
+  .main-title.third {
+    max-width: 60rem;
+  }
+
+  .footer-container {
+    margin: 3.2rem 2.4rem;
+    padding: 0;
+  }
+}
+
+@media (max-width: 743px) {
+  .header-container {
+    margin: 0 1.6rem;
+  }
+
+  .banner,
+  .banner.bottom {
+    width: 100%;
+    height: 144vw;
+  }
+
+  .banner-text {
+    font-size: 3.2rem;
+    line-height: 4.48rem;
+  }
+
+  .banner-button {
+    padding: 1.2rem 7.1rem;
+    width: 24rem;
+    font-size: 1.6rem;
+  }
+
+  .banner-text-container {
+    margin-bottom: 13.2rem;
+    width: 24rem;
+  }
+
+  .main-title {
+    font-size: 2.4rem;
+    margin: 0;
+  }
+
+  .description {
+    font-size: 1.6rem;
+  }
+
+  .description.first {
+    max-width: 18.3rem;
+  }
+
+  .description.second {
+    max-width: 22rem;
+  }
+  .description.third {
+    max-width: 24.7rem;
+  }
+
+  .main-page {
+    width: calc(100% - 3.2rem);
+  }
+
+  .footer-container {
+    flex-wrap: wrap;
+  }
+
+  .copyright {
+    margin-bottom: 2.4rem;
+  }
 }
