style: 랜딩페이지 스타일 변경

--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -189,6 +189,11 @@ header {
   word-break: keep-all;
 }
 
+.main-page-text {
+  display: flex;
+  flex-direction: column;
+}
+
 .main-page-text.first {
   max-width: 28rem;
 }
@@ -209,9 +214,12 @@ header {
   word-break: keep-all;
 }
 
+.main-page-text.align-left {
+  align-items: start;
+  text-align: left;
+}
+
 .main-page-text.align-right {
-  display: flex;
-  flex-direction: column;
   align-items: end;
   text-align: right;
 }
@@ -341,6 +349,10 @@ footer {
 
   .description.third {
     max-width: 34rem;
+  }
+
+  .sub-title {
+    margin-bottom: 1.6rem;
   }
 
   .main-content-container {
