--- a/css/_login.css
+++ b/css/_login.css
@@ -10,27 +10,32 @@ main > .content {
   width: 640px;
   text-align: center;
 }
+.big_logo {
+  display: block;
+  margin-bottom: 40px;
+}
 
 #forms {
 }
 #forms label {
   display: block;
   width: 100%;
+  position: relative;
   text-align: left;
-  font-size: 1.8rem;
+  font-size: 18px;
   font-weight: 700;
-  line-height: 2.6rem;
-  margin-bottom: 1.6rem;
+  margin-bottom: 10px;
 }
 #forms .inputbox {
   width: 100%;
-  padding: 1.6rem 2.4rem;
+  padding: 16px 24px;
   border-radius: 12px;
-  height: 5.6rem;
+  height: 56px;
   background: var(--gray100);
-  margin-bottom: 2.4rem;
+  margin-bottom: 36px;
   display: flex;
   border: 1px solid transparent;
+  position: relative;
 }
 #forms .inputbox.on {
   border: 1px solid var(--primary100);
@@ -40,25 +45,46 @@ main > .content {
   width: 100%;
   height: 100%;
   background: transparent;
-  font-size: 1.6rem;
-  line-height: 2.6rem;
+  font-size: 16px;
   outline: none;
 }
+#forms .inputbox .seePw {
+  display:flex;
+  align-items: center;
+  justify-content: center;
+}
 
-#forms button {
+#forms .inputbox.err {
+  border-color: var(--error);
+}
+#forms .inputbox .errMsg {
+  position: absolute;
+  left: 0;
+  top: 110%;
+  /* position: absolute; */
+  display: block;
+  text-align: left;
+  padding-left: 16px;
+  font-size: 15px;
+  font-weight: 600;
+  color: var(--error);
+  letter-spacing: -1px;
+}
+#forms button.btn.loginBtn {
   width: 100%;
-  height: 5.6rem;
+  height: 56px;
   background: var(--gray400);
   color: var(--gray50);
-  font-size: 2rem;
-  line-height: 3.2rem;
+  font-size: 20px;
+  line-height: 32px;
   font-weight: 600;
   border: 0;
   border-radius: 40px;
-  margin-bottom: 2.4rem;
+  margin-bottom: 24px;
   transition: 0.5s;
 }
-#forms button.btn.on {
+#forms button.btn.loginBtn.on {
+  cursor: pointer;
   background-color: var(--primary100);
 }
 
@@ -66,14 +92,14 @@ main > .content {
   display: flex;
   justify-content: space-between;
   background: #e6f2ff;
-  padding: 1.6rem 2.3rem;
-  height: 7.4rem;
+  padding: 16px 23px;
+  height: 74px;
   border-radius: 12px;
-  margin-bottom: 2.4rem;
+  margin-bottom: 24px;
 }
 #forms .simple p {
-  font-size: 1.6rem;
-  line-height: 2.6rem;
+  font-size: 16px;
+  line-height: 26px;
   font-weight: 500;
   display: flex;
   align-items: center;
@@ -82,7 +108,7 @@ main > .content {
 #forms .simple .icon_box {
   display: flex;
   justify-content: space-between;
-  width: 10rem;
+  width: 100px;
 }
 #forms .simple a {
   display: block;
@@ -90,29 +116,28 @@ main > .content {
 
 #forms .link {
   text-align: center;
-  font-size: 1.4rem;
-  line-height: 2.4rem;
+  font-size: 14px;
+  line-height: 24px;
   font-weight: 500;
   color: var(--gray800);
 }
 #forms .link a {
   color: var(--primary100);
-  font-size: 1.4rem;
-  line-height: 1.6rem;
+  font-size: 14px;
   font-weight: 500;
   text-decoration: underline;
 }
 
-@media screen and (max-width: 640px) {
-  html {
-    font-size: 10px;
-  }
+@media screen and (max-width: 1199px) {
   .big_logo img {
     width: 100%;
     max-width: 390px;
   }
+}
+
+@media screen and (max-width: 743px) {
   main > .content {
-    width: 100%;
-    padding: 0 5rem;
+    padding: 0 16px;
+    max-width: 400px;
   }
 }
